# Extra_surface_repo

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  add_header.sh  algo-env.sh  algo-env.sh.conf  build-all.sh  compile_all_kernel.sh  copy_compile.sh  create_mount.sh  ddt_backup.sh  docker-compose.yml  ipfs_commands.sh  note-ddt.org  notes-ddt.org  notes-eval.org  notes.org  refact.sh  run_all_tests.sh  run_all_workflow.sh  run_benh.sh  run_croco.sh  run_distributed_cnes.sh  run_distributed_local.sh  run_distributed_multivac.sh  run_examples.sh  run_examples_finetune.sh  run_lidarhd.sh  run_local.sh  run_multivacs.sh  run_multivacs_ddt.sh  run_multivacs_wasure.sh  run_preprocess.sh  run_tiled_example.sh  run_workflow.sh  run_yanis.sh  update_cnes.sh
.github/workflows/: build_scala_packages.yml  push_build.yml  push_setup.yml
api/: Dockerfile.api  cache.py  email.py  models.py  requirements.txt  server.py  test_server.py
backend/api/: .env.example  Dockerfile.api  cache.py  email.py  models.py  requirements.txt  server.py  test_server.py
backend/sparkling_washeur/: .dockerignore  .env.api  .gitignore  CMakeLists.txt  Dockerfile.api  Dockerfile.arm  Dockerfile.build  Dockerfile.emr  Dockerfile.emr-1  Dockerfile.emr-2  Dockerfile.emr-3  Dockerfile.spark  Dockerfile.washeur  README.md  algo-env.sh  algo-env.sh.conf  cache.py  cmake_params.txt  download_files.sh  email.py  event_architecture.py  ipfs_commands.sh  models.py  readme.md  requirements.txt  run_examples.sh  run_examples_finetune.sh  run_lidarhd.sh  run_workflow.sh  server.py  test_event_architecture.py  test_server.py
backend/sparkling_washeur/datas/: liste_dalle.txt
backend/sparkling_washeur/services/: build-unix.sh
backend/sparkling_washeur/spark-packages/: build.sbt
backend/sparkling_washeur_algo/: Dockerfile.spark  algo-env.sh  docker_interface.sh  emr-configuration.json  execute_job.py  requirements.txt  spark_job_reconstruction.py
backend/sparkling_wasure_serverless/: requirements.txt  template.yaml
datas/: liste_Paris.txt  liste_dalle_aiguille.txt  liste_dalle_montpellier.txt
datas/2d_austin/imgs/: austin1_lab.tif  austin1_res.ply  austin2_lab.tif  austin2_res.ply  austin7_lab.tif  austin7_res.ply  austin8_lab.tif  austin8_res.ply  datas.json  wasure_metadata_surface.xml
datas/2d_austin/ply_conflic/: austin1_res.ply  austin1b_res.ply  wasure_metadata_conflict.xml
datas/2d_austin/ply_surface/: wasure_metadata_surface.xml
datas/3d_bench/: wasure_metadata_3d.xml  wasure_metadata_3d_b64stream.xml  wasure_metadata_3d_ori.xml  wasure_metadata_3d_ori_do.xml  wasure_metadata_3d_plystream.xml
datas/3d_bench_small/: croco_small.ply  wasure_metadata_3d.xml
datas/3d_egouts/: wasure_metadata.xml  wasure_metadata_3d.xml
datas/ign_las/: find_area_las.py
datas/lidar_hd_crop/: wasure_metadata.xml
datas/lidar_hd_crop_1/: wasure_metadata.xml
datas/lidar_hd_crop_w/: wasure_metadata.xml
datas/random/: benchmark_metadata.xml  unitest_metadata.xml  unitest_metadata_2D.xml  unitest_metadata_3D.xml
frontend/: .env.example  .gitignore  dockerfile  env.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: stripeComponent.tsx
frontend/src/utils/: auth.ts  email_route.tsx  s3_files_auth.ts  supabase_queries.ts  supabase_server.ts  types_db.ts
frontend_v1/: pnpm-lock.yaml
frontend_v1/apps/web/: package.json
infra/: README.md  app.py  flow.drawio  package.json  requirements.txt
infra/infra/: infra_stack.py
infra/stacks/: README.md  __init__.py  api_gw.py  ecr.py  infra_stack.py  network.py  s3.py
infra/stacks/emr/: __init__.py  docker.sh  roles.py  run.sh  stack.py
infra/stacks/invoke/: lambda_stack.py
infra/stacks/lambda/: invoke.py  lambda_stack.py
infra/stacks/lambda_invoke/: invoke.py  lambda_stack.py
infra/tests/unit/: test_infra_stack.py
services/: build-unix.sh
services/cmake/: FindCUT-PURSUIT.cmake  FindDouble-conversion.cmake  FindLAS.cmake
services/create_datas/: CMakeLists.txt
services/create_datas/include/: create_data_typedefs.hpp  create_datas_params.hpp
services/create_datas/scripts/: Install_cv2.sh  aerial_labelize_img.py  aerial_process_all.py  aerial_raytracing.py  georef_tif.py  install_cv2.sh
services/create_datas/src/stream/: CMakeLists.txt  local.hpp  log_ndtri.txt  main_create_data.cpp
services/ddt/: CMakeLists.txt  CMakeLists.txt.bp
services/ddt/include/: ddt_data.hpp  ddt_params.hpp  ddt_spark_utils.hpp  ddt_stream_params.hpp  ddt_typedefs.hpp  io_ddt_stream.hpp
services/ddt/workflow/: workflow_ddt.scala  workflow_ddt_multivacs.scala  workflow_ddt_random_seed.scala
services/mesh23dtile/: README.md  mesh23dtile.py  run.sh
services/mesh23dtile_bcp/: mesh23dtile.py
services/pbs/: start_cluster_v1.sh
services/wasure/: CMakeLists.txt
services/wasure/include/: flags.hpp  graph_cut.hpp  input_params.hpp  scanline_orient_normals.hpp  scanline_orient_normals_ori.hpp  simplex_data.hpp  simplex_data_wasure.hpp  tbmrf.hpp  tbmrf_conflict.hpp  tbmrf_reco.hpp  (+7 more)
services/wasure/src/exe/: CMakeLists.txt  main_compute_normal.cpp  main_polyfit.cpp  main_preprocess.cpp  main_qpb.cpp  main_qpbo.cpp  main_structuring_example.cpp  main_test_graph.cpp  main_wasure_local.cpp  main_wasure_stream.cpp
src/common/: build-unix-gen.sh
src/core/: DDT.hpp  algorithm.hpp  bbox.hpp  ddt_exeptions.hpp  main.cpp  main_stream.cpp  tile.hpp
src/docker/: Dockerfile  Dockerfile-base  Dockerfile-base-Ubuntu-16-04  Dockerfile-base-Ubuntu-18-10  Dockerfile-base-Ubuntu-20-04  Dockerfile-base-Ubuntu-devel  Dockerfile-cnes  Dockerfile-hdfs  docker_interface.sh  run_bash_docker.sh
src/scala/: ddt_stream.scala  ddt_stream_cluster.scala  ddt_stream_tri.scala  ddt_stream_tri_tmp.scala  ddt_stream_wasure.scala  ddt_stream_wasure_bp.scala  ddt_stream_wasure_gc.scala  run_algo_spark.sh  run_example_2d.sh
src/spark/: build.sbt  spark.sh
ui/: .gitignore  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui/src/: env.ts
(+267 files in other folders)
